# graphene-django-pretty

./: Makefile  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
graphene_django_pretty/: utils.py  views.py
graphene_django_pretty/auth/: decorators.py  exceptions.py
graphene_django_pretty/error/: exceptions.py
graphene_django_pretty/fields/: base.py  connection_fields.py  field_converter.py
graphene_django_pretty/mutations/: base.py  output.py
graphene_django_pretty/scalars/: email.py
graphene_django_pretty/types/: base.py  utils.py
tests/: conftest.py
tests/django_setup/: backend.py  errors.py  middleware.py  models.py  schema.py  settings.py
tests/test_auth/: conftest.py  test_decorators.py
tests/test_error/: conftest.py  test_errors.py
tests/test_fields/: test_fields.py
tests/test_mutations/: test_mutations.py
tests/test_scalars/: test_email.py
