[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "graphene_django_pretty"
description = "Graphene-django extension"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/fs/graphene-django-pretty"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8.10"
Django = "^4.0.1"
pytest = "^6.2.5"
graphene = "^3.0"
graphene-django = {version = "3.0b7", allow-prereleases = true}
pytest-django = "^4.5.2"
pytest-pythonpath = "^0.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
nitpick = "^0.31"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"

sphinx = "^5.1"
sphinx-autodoc-typehints = "^1.16"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.8"
